[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemy/unnamed.png" type="Texture" id=1]
[ext_resource path="res://enemy/enemy2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.1865, 29.0611 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.8863, 2.89865 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.2676, 25.6045 )

[node name="enemy2" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
detects_cliffs = false

[node name="unnamed" type="Sprite" parent="."]
scale = Vector2( 0.137992, 0.137992 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.37842, -2.97302 )
shape = SubResource( 1 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 30 )

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -2.37843, -31.2166 )
shape = SubResource( 2 )

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( -2.37841, -2.97301 )
shape = SubResource( 3 )

[connection signal="body_entered" from="top_checker" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
